# EasyML

./: .gitignore  README.md  app.py  requirements.txt  setup.cfg
src/EasyML/: AutoML.py  data.py  models.py
