[metadata]
name = EasyML
version = 0.1.0
description = A python web app helping user with their ML requirements.
author = Varun Date
author_email = varun.date.1998@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pandas
    scikit-learn
    streamlit

[options.packages.find]
where = src